<resources>
    <string name="app_name">Football Court Counter</string>
    <string name="team_1">Team 1</string>
    <string name="font">sans-serif-light</string>
    <string name="Goal">Goal</string>
    <string name="text">sans-serif-light</string>
    <string name="Fouls">Fouls</string>
    <string name="Penalty">Penalty</string>
    <string name="team_2">Team 2</string>
    <string name="penalty">Penalty</string>
    <string name="reset">RESET</string>
    <string name="score2">0</string>
    <string name="score3">0</string>
    <string name="score4">0</string>
    <string name="score5">0</string>
    <string name="score6">0</string>
    <string name="score1">0</string>
    <string name="fontFamilyTeam1">sans-serif-medium</string>
    <string name="fontFamilyZero3">sans-serif-light</string>
    <string name="fontFamilyTeam2">sans-serif-medium</string>
    <string name="fontFamilyZero4">sans-serif-light</string>
    <string name="fontFamilyZero5">sans-serif-light</string>
    <string name="fontFamilyZero6">sans-serif-light</string>
    <string name="goal">Goal</string>
    <string name="fouls">Fouls</string>
</resources>
